# constellation-processors

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: audit.yml  checks.yml  deploy.yaml
migrations/2022-03-22-003841_create_shares/: down.sql  up.sql
migrations/2023-06-27-055226_expand_metric_name_value/: up.sql
migrations/2023-06-27-195619_replace_index/: up.sql
migrations/2024-03-12-043232_custom_threshold/: down.sql  up.sql
migrations/2026-02-05-033813_add_is_postcard/: down.sql  up.sql
misc/: SPEC.md  create_additional_dbs.sql  create_integration_test_db.sql  create_localstack_bucket.sh  dump_docker_pg.sh  flow.drawio  rds_iam_bootstrap  restore_docker_pg.sh
misc/test-client/: Cargo.toml  test.jsonl
misc/test-client/src/: main.rs
src/: aggregator.rs  buffer.rs  channel.rs  dbsink.rs  epoch.rs  lake.rs  lakesink.rs  main.rs  models.rs  msk_iam.rs  partitioner.rs  profiler.rs  prometheus.rs  rds.rs  record_stream.rs  scheduler.rs  schema.rs  server.rs  slack.rs  star.rs  state.rs  util.rs  warehouse.rs
src/aggregator/: consume.rs  group.rs  mod.rs  pending.rs  processing.rs  recovered.rs  report.rs  spot.rs
src/models/: error.rs  mod.rs  pending_msg.rs  recovered_msg.rs
src/record_stream/: inmem.rs  kafka.rs  mod.rs
