[package]
name = "constellation-processors"
version = "1.1.0"
edition = "2021"

[dependencies]
star-constellation = { version = "0.2.2", git = "https://github.com/brave/constellation", rev = "404725a562c30b1aac6df78333069eea6739ebdd" }
sta-rs = { version = "0.2.2", git = "https://github.com/brave/sta-rs", rev = "2d1c714ae2b15f93e8c58b0aa0b7e1f88fe12f39" }
actix-web = "4"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
futures-core = "0.3"
dotenvy = "0.15"
derive_more = "0.99"
hex = "0.4"
rand = "0.8"
clap = { version = "4.3", features = ["derive"] }
base64 = "0.21"
bincode = "1.3"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
rdkafka = { version = "0.33", features = ["ssl"] }
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
chrono = "0.4"
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json"] }
rusoto_core = "0.48"
rusoto_s3 = "0.48"
rusoto_credential = "0.48"
rusoto_sts = "0.48"
prometheus-client = "0.21"
sentry = "0.31"
jemallocator = "0.5"

[profile.dev]
opt-level = 3

