[package]
name = "constellation-processors"
version = "1.1.0"
edition = "2021"

[dependencies]
star-constellation = "0.2.3"
sta-rs = "0.3.0"
actix-web = "4"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
futures-core = "0.3"
dotenvy = "0.15"
derive_more = "0.99"
hex = "0.4"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
bincode = "1.3"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
rdkafka = { version = "0.36", features = ["ssl"] }
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
calendar-duration = "1.0"
time = { version = "0.3", features = ["parsing", "serde"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json"] }
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.85", features = ["behavior-version-latest"] }
prometheus-client = "0.22"
sentry = "0.36"
jemallocator = "0.5"

[profile.dev]
opt-level = 3

