[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
star-constellation = "0.2"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.3", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
csv = "1.2"

[profile.dev]
opt-level = 3
