[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
star-constellation = "0.2"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 3
